# drainage

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
drainage/: __init__.py  lib.py
tests/: tests.py
