[tool.poetry]
name = "drainage"
version = "0.1.0"
description = "Implementation of UNIX-like pipes for Python."
authors = ["Vasiliy Spassky <spassky99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.2"
pylint = "2.17.2"
poethepoet = "0.19.0"
mypy = "1.2.0"
coverage = "7.2.3"
pdoc3 = "0.10.0"
pylint-mccabe = "0.1.3"
pylint-quotes = "0.2.3"

[tool.poe.tasks]
test = "coverage run -m pytest tests/tests.py"
coverage = ["_covreport", "_covhtml"]
lint = "pylint drainage/lib.py"
typecheck = "mypy drainage/lib.py"
doc = "pdoc3 --html drainage --force"
_covreport = "coverage report -m"
_covhtml = "coverage html"

[tool.coverage.run]
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.pylint]
max-line-length = 79
load-plugins = [
    "pylint.extensions.mccabe",
    "pylint_quotes",
]

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
